# rdflib-jsonld

./: .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  index.html  jsonld-parser.rst  jsonld.rst  requirements.travis.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  jsonld-parser.rst  jsonld-serializer.rst  make.bat
rdflib_jsonld/: __init__.py  _compat.py  autoframe.py  context.py  errors.py  jsonld_parser.py  jsonld_serializer.py  keys.py  ldcontext.py  parser.py  serializer.py  test_jsonld.py  util.py
test/: 1.1.py  README.md  __init__.py  runner.py  test_api.py  test_autoframe.py  test_borrowedraptorsuite.py  test_compaction.py  test_context.py  test_context.rst  test_core.py  test_jsonld.py  test_jsonld_examples.py  test_localsuite.py  test_named_graphs.py  test_testsuite.py  test_version11.py
test/issues/: 61-context.jsonld  61-data.jsonld  61.py
test/json/: Makefile.am  bad-00.json  bad-01.json  bad-02.json  bad-03.json  bad-04.json  bad-05.json  bad-06.json  bad-07.json  bad-08.json  bad-09.json  bad-10.json  bad-11.json  bad-12.json  bad-13.json  example1.json  example2.json  example2.nt  example3.json  example3.nt  example4.json  example4.nt
test/local-suite/: manifest.jsonld
test/test-suite/: context.jsonld  vocab.jsonld  vocab_context.jsonld
test/test-suite/tests/: fromRdf-0004-in.nq  fromRdf-0004-out.jsonld  fromRdf-0005-in.nq  fromRdf-0007-in.nq  toRdf-0091-in.jsonld  toRdf-0116-in.jsonld  toRdf-0117-in.jsonld  toRdf-manifest.jsonld
test/tests/: rdf-0001.ttl  rdf-0003.ttl  rdf-0004.ttl  rdf-0005.ttl  rdf-0006.ttl  rdf-0007.ttl  rdf-0008.ttl  rdf-0010.jsonld  rdf-0010.ttl  rdf-0011.ttl  rdf-0012.ttl  rdf-0013.ttl  rdf-0014.ttl  rdf-0015.ttl  rdf-0019.ttl  rdf-0020.ttl  rdf-0021.jsonld  rdf-0021.ttl  rdf-0022.jsonld  rdf-0023.jsonld  rdf-0023.ttl  rdf-0024.jsonld  rdf-0024.ttl  rdf-0026.ttl
